rust/codec-github/tests/snapshots/examples__search-users-1.snap
---
source: rust/codec-github/tests/examples.rs
expression: node
---
{
  "type": "Person",
  "images": [
    {
      "type": "ImageObject",
      "contentUrl": "https://avatars.githubusercontent.com/u/1?v=4"
    }
  ],
  "name": "mojombo",
  "url": "https://github.com/mojombo"
}
