rust/codec-github/tests/snapshots/examples__search-users-2.snap
---
source: rust/codec-github/tests/examples.rs
expression: node
---
{
  "type": "Organization",
  "name": "openai",
  "images": [
    {
      "type": "ImageObject",
      "contentUrl": "https://avatars.githubusercontent.com/u/14957082?v=4"
    }
  ],
  "url": "https://github.com/openai"
}
