rust/codec-github/tests/snapshots/examples__search-users-3.snap
---
source: rust/codec-github/tests/examples.rs
expression: node
---
{
  "type": "Organization",
  "name": "awslabs",
  "images": [
    {
      "type": "ImageObject",
      "contentUrl": "https://avatars.githubusercontent.com/u/3299148?v=4"
    }
  ],
  "url": "https://github.com/awslabs"
}
